--- a/RuntimePermissions/app/src/main/res/layout/activity_main.xml
+++ b/RuntimePermissions/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <Button
-            android:id="@+id/button2"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Location" />
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="captureCameraImage"
+                android:layout_weight="1"
+                android:text="Open Camera" />
+
+            <ImageView
+                android:id="@+id/imgCapture"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_gravity="right"
+                android:background="@color/colorAccent"/>
+        </LinearLayout>
     </LinearLayout>
 
 
