--- a/RuntimePermissions/app/src/main/res/layout/activity_main.xml
+++ b/RuntimePermissions/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="220dp"
             android:layout_gravity="right"
+            android:layout_margin="5dp"
             android:visibility="gone" />
 
         <Button
@@ -30,6 +31,12 @@
             android:layout_weight="1"
             android:onClick="readContact"
             android:text="Read Contact" />
+        <TextView
+            android:id="@+id/tvContact"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:visibility="gone"/>
     </LinearLayout>
 
 
